--- a/css/index.css
+++ b/css/index.css
@@ -4,13 +4,18 @@ header {
 }
 
 .container{
-	width: 60%;
-	height: 100%;
-	margin: 0 auto;
+	text-align: center;
+	font-size: 2em;
+	margin: 0 0 1em;
 }
 
 .titulo {
 	font-size: 50px;
 	position: relative;
 	color: white;
+}
+
+
+.nav {
+	
 }
