--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,11 @@ section {
 	padding-top: 10px;
 }
 
+a {
+	text-decoration: none;
+	color: white;
+}
+
 .container{
 	text-align: center;
 	font-size: 2em;
